--- a/templates/index.html
+++ b/templates/index.html
@@ -5,16 +5,12 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<<<<<<< HEAD
 	<title>DevOps APP - Devops-emersonsilva </title>
-=======
-	<title>Pipeline Devops-emersonsilva </title>
->>>>>>> f7a339a3b99b8de612be23e9cfa960cbe2f220c8
 	<link rel="stylesheet" href="/static/css/main.css">
 </head>
 
 <body>
-	<div class="alert"> Pipeline Devops-emersonsilva.</div>
+	<div class="alert"> DevOps APP - Devops-emersonsilva</div>
 	
 	<div class="container">
 		<div class="logo">
